Suppress DISPATCH_PROPERTYGET for calls from QAxScript.

Factor out a version QAxBase::dynamicCall() taking a flag that
allows for suppressing DISPATCH_PROPERTYGET and use that
from QAxScript to fix return types. Add autotest.

Task-number: QTBUG-42289
Change-Id: I1900061bc2de6d5987cb7323bb388df806e53e96
Reviewed-by: Andy Shaw <andy.shaw@digia.com>