tests/auto/auto.pro
@@ -1,5 +1,9 @@
 TEMPLATE = subdirs
 SUBDIRS += \
     qaxobject \
+    qaxscript \
     dumpcpp \
     cmake
+
+*g++*: SUBDIRS -= \
+    qaxscript \
